--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
   },
   "homepage": "https://github.com/lucferreira-27/cc-my-scripts#readme",
   "dependencies": {
+    "axios": "^1.2.1",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2"
   }
 }
